# MusicVisualizer

./: .gitnore  CMakeLists.txt
include/: bars.h  windowDrag.h
src/: app  bars.cpp  main.cpp  windowDrag.cpp
